info modal updated

--- a/index.html
+++ b/index.html
@@ -55,10 +55,17 @@
                   <li>To start the game click the <b>"Play"</b> button.</li>
                   <br />
                   <li>
+                    You can change the difficulty of the game with the third button in the home scene.
+                  </li>
+                  <br>
+                  <li>
                     On the game scene you have a keypad with numbers and a
                     mathematical problem. The type of the problem can be
                     modified by the buttons with mathematical operations.
-                    <b>You will have 5 problems to solve.</b>
+                    <br>
+                    <b>On the "normal" mode you will have 5 problems to solve.</b>
+                    <br>
+                    <b>On the "extreme" mode you will have to solve problems until you make a mistake.</b>
                   </li>
                   <br />
                   <li>
@@ -67,14 +74,17 @@
                   </li>
                   <br />
                   <li>
-                    You can click the <b>"Clear"</b> button to erase your
+                    You can click the <b>"Clear"</b> or <b>"Backspace"</b> buttons to erase your
                     wrong answer.
                   </li>
                   <br />
                   <li>
-                    When you answer all problems, the end scene will show to
-                    give you the results. Then you can choose to play again or
-                    start on the next level of difficulty.
+                    When you answer all problems, you will see your result. Then you can choose to play again,
+                    start on the next level of difficulty or end the game.
+                  </li>
+                  <br>
+                  <li>
+                    After you end the game you will see the summary statistics of all your rounds before the end of the game.
                   </li>
                 </div>
               </div>
