--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             </div>
           </div>
         </div>
-        <div class="col d-flex flex-column align-items-center">
-          <div>
-            <img id="gameSceneDog" class="img-fluid mt-4" src="./images/transition dog.png" alt="emoji"/>
+        <div class="col d-flex flex-column align-items-center justify-content-center">
+          <div class="mw-75">
+            <img id="gameSceneDog" class="img-fluid" src="./images/transition dog.png" alt="emoji"/>
           </div>
         </div>
       </div>
@@ -223,7 +223,7 @@
       </div>
       <div class="d-flex align-items-center justify-content-center">
         <div class="w-25">
-          <button class="btn btn-lg sidebtn text-nowarp text-center w-100" onclick="homeMenu()">Restart</button>
+          <button class="btn btn-lg sidebtn text-nowarp text-center w-100" onclick="homeMenu(), resetStats()">Restart</button>
         </div>
       </div>
     </div>
