--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="scene_switcher.js"></script>
   <script src="stats.js"></script>
   <script src="modes.js"></script>
+  <script src="gameTimer.js"></script>
   <link rel="icon" href="./images/FavLogo.png" type="image/icon type" />
 </head>
 
@@ -24,9 +25,9 @@
       <div class="d-flex flex-column align-items-center justify-content-center">
         <img class="img-fluid" src="images/Untitled_Artwork.png" alt="emoji"/>
         <div class="d-flex flex-row align-items-center justify-content-center">
-          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="gameStart(), sound(1)" id="playButton">Play</button>
-          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
-          <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal</button>
+          <button class="btn btn-light btn-lg startbtn" onclick="gameStart(), sound(1)" id="playButton">Play</button>
+          <button class="btn mx-2 btn-light btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
+          <button class="btn btn-light btn-lg startbtn" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal</button>
   
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0), sound(1)">Normal Mode</a></li>
@@ -93,7 +94,9 @@
           </div>
         </div>
         <div class="d-flex align-self-center justify-content-center">
-          <img class="img-fluid mt-4" src="./images/mate.png" alt="emoji"/>
+          <div class="mw-75 pt-4">
+            <img class="img-fluid" src="./images/mate.png" alt="emoji"/>
+          </div>
         </div>
       </div>
     </div>
@@ -178,19 +181,18 @@
         <div class="modal-content">
           <div class="modal-header" style="background-color: #c7acda">
             <h1 class="modal-title title w-100 text-center" id="gameResultTitle">Game Result</h5>
-             
           </div>
           <div class="modal-body" style="background-color: #f0d9ff">
-            <h4 id="result" class="p-1 m-1 resborder">Result: 2/5</h4>
-            <p>Game duration: </p> 
+            <h4 id="result" class="p-1 m-1 resborder res">Result: 2/5</h4>
+            <p class="pars text-center" id="gameDuration">Game duration: </p> 
           </div>
           <div class="modal-footer" style="background-color: #f0d9ff">
             <div class="container-fluid">
               <div class="d-flex flex-row align-items-center justify-content-center">
-                <div class="text-center">
-                  <button class="btn sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset(), closeModal()">Play Again</button>
-                  <button class="btn sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch(), closeModal()">Next Level</button>
-                  <button class="btn sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame(), closeModal()">End Game</button>
+                <div class="d-flex">
+                  <button class="btn btn-lg sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset(), closeModal()">Play Again</button>
+                  <button class="btn btn-lg mx-2 sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch(), closeModal()">Next Level</button>
+                  <button class="btn btn-lg sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame(), closeModal()">End Game</button>
                 </div>
               </div>
             </div>
@@ -210,19 +212,22 @@
       </div>
       <div class="d-flex justify-content-start w-50 shadow rounded p-2" style="background-color: #e3c3f8;">
         <div class="d-flex flex-column">
-          <p class="m-1 title" id="playTime">Total play time:</p>
-          <p class="m-1 title" id="totalRounds">Total rounds:</p>
-          <p class="m-1 title" id="totalGames">Total games:</p>
-          <p class="m-1 title" id="totalAnswers">Total answers:</p>
-          <p class="m-1 title" id="correctPoints">Correct answers:</p>
-          <p class="m-1 title" id="incorrectPoints">Incorrect answers:</p>
+          <p class="m-1 pars" id="playTime">Total play time:</p>
+          <p class="m-1 pars" id="totalRounds">Total rounds:</p>
+          <p class="m-1 pars" id="totalGames">Total games:</p>
+          <p class="m-1 pars" id="totalAnswers">Total answers:</p>
+          <p class="m-1 pars" id="correctPoints">Correct answers:</p>
+          <p class="m-1 pars" id="incorrectPoints">Incorrect answers:</p>
+          <p class="m-1 pars" id="overallPoints">Overall points: </p>          
         </div>
       </div>
       <div class="d-flex align-self-center justify-content-center">
-        <img id="endSceneDog" class="img-fluid mt-4" src="./images/mate.png" alt="emoji"/>
+        <div class="mw-75 pt-4">
+          <img id="endSceneDog" class="img-fluid" src="./images/mate.png" alt="emoji"/>
+        </div>
       </div>
       <div class="d-flex align-items-center justify-content-center">
-        <div class="w-25">
+        <div class="mw-25">
           <button class="btn btn-lg sidebtn text-nowarp text-center w-100" onclick="homeMenu(), resetStats()">Restart</button>
         </div>
       </div>
