--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       </div>
       <div class="d-flex justify-content-start w-50 shadow rounded p-2" style="background-color: #e3c3f8;">
         <div class="d-flex flex-column">
-          <p class="m-1 pars" id="playTime">Total play time:</p>
+          <p class="m-1 pars" id="playTime">Play time:</p>
           <p class="m-1 pars" id="totalRounds">Total rounds:</p>
           <p class="m-1 pars" id="totalGames">Total games:</p>
           <p class="m-1 pars" id="totalAnswers">Total answers:</p>
@@ -222,14 +222,10 @@
         </div>
       </div>
       <div class="d-flex align-self-center justify-content-center">
-        <div class="mw-75 pt-4">
-          <img id="endSceneDog" class="img-fluid" src="./images/mate.png" alt="emoji"/>
-        </div>
+        <img id="endSceneDog" class="img-fluid" src="./images/mate.png" alt="emoji"/>
       </div>
       <div class="d-flex align-items-center justify-content-center">
-        <div class="mw-25">
-          <button class="btn btn-lg sidebtn text-nowarp text-center w-100" onclick="homeMenu(), resetStats()">Restart</button>
-        </div>
+        <button class="btn btn-lg sidebtn text-nowarp text-center" onclick="homeMenu(), resetStats()">Restart</button>
       </div>
     </div>
   </div>
