--- a/index.html
+++ b/index.html
@@ -210,18 +210,22 @@
       <div class="d-flex align-self-center justify-content-center">
         <h1 class="title">Scores</h1>
       </div>
-      <div class="d-flex justify-content-start w-50 shadow rounded p-2" style="background-color: #e3c3f8;">
-        <div class="d-flex flex-column">
-          <p class="m-1 pars" id="playTime">Play time:</p>
-          <p class="m-1 pars" id="totalRounds">Total rounds:</p>
-          <p class="m-1 pars" id="totalGames">Total games:</p>
-          <p class="m-1 pars" id="totalAnswers">Total answers:</p>
-          <p class="m-1 pars" id="correctPoints">Correct answers:</p>
-          <p class="m-1 pars" id="incorrectPoints">Incorrect answers:</p>
-          <p class="m-1 pars" id="overallPoints">Overall points: </p>          
+      <div class="d-flex align-items-center w-75 shadow rounded p-2" style="background-color: #e3c3f8;">
+        <div class="d-flex flex-row justify-content-start col-12">
+          <div class="d-flex flex-column col-6">
+            <p class="m-1 pars" id="playTime">Play time:</p>
+            <p class="m-1 pars" id="totalRounds">Total rounds:</p>
+            <p class="m-1 pars" id="totalGames">Total games:</p>        
+          </div>
+          <div class="d-flex flex-column col-6">
+            <p class="m-1 pars" id="totalAnswers">Total answers:</p>
+            <p class="m-1 pars" id="correctPoints">Correct answers:</p>
+            <p class="m-1 pars" id="incorrectPoints">Incorrect answers:</p>
+            <p class="m-1 pars" id="overallPoints">Overall points: </p>  
+          </div>
         </div>
       </div>
-      <div class="d-flex align-self-center justify-content-center">
+      <div class="d-flex align-self-center justify-content-center mh-50">
         <img id="endSceneDog" class="img-fluid" src="./images/mate.png" alt="emoji"/>
       </div>
       <div class="d-flex align-items-center justify-content-center">
