--- a/index.html
+++ b/index.html
@@ -17,38 +17,37 @@
   <link rel="icon" href="./images/FavLogo.png" type="image/icon type" />
 </head>
 
-<body style="background-color: #f0d9ff">
+<body class="disable-zoom" style="background-color: #f0d9ff;">
   <!-- Home screen container start -->
   <div id="homesn" class="container-fluid min-vh-100 align-items-center justify-content-center d-flex">
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
     <div class="d-flex row flex-column flex-lg-row align-items-center justify-content-center">
       <div class="d-flex flex-column align-items-center justify-content-center">
         <img class="img-fluid" src="images/Untitled_Artwork.png" alt="emoji"/>
-        <div class="d-flex flex-row align-items-center justify-content-center">
-          <button class="btn btn-light btn-lg startbtn" onclick="gameStart(), sound(1)" id="playButton">Play</button>
-          <button class="btn mx-2 btn-light btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
-          <button class="btn btn-light btn-lg startbtn" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal</button>
-  
+        <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center">
+          <button class="btn p-2 btn-lg startbtn" onclick="gameStart(), sound(1)" id="playButton">Play</button>
+          <button class="btn p-2 my-2 mx-sm-2 btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
+          <button class="btn p-2 btn-lg startbtn" onclick="sound(1)" data-bs-toggle="dropdown" id="modesButton">Normal</button>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><a class="dropdown-item btn btn-lg" onclick="switchMode(0), sound(1)">Normal Mode</a></li>
             <div class="dropdown-divider"></div>
             <li><a class="dropdown-item btn btn-lg" onclick="switchMode(2), sound(1)">Extreme Mode</a></li>
-          </ul>
+          </ul>          
         
 
           <!-- Modal -->
-          <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+          <div class="modal fade modal-lg" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1"
+            aria-labelledby="Information" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
                 <div class="modal-header" style="background-color: #c7acda">
                   <h1 class="modal-title fs-5" id="staticBackdropLabel">
-                    <b>Information</b>
+                    <b class="title">Information</b>
                   </h1>
                   <button onclick="sound(3)" type="button" class="btn-close" data-bs-dismiss="modal"
                     aria-label="Close"></button>
                 </div>
-                <div class="modal-body" style="background-color: #f0d9ff">
+                <div class="modal-body pars" style="background-color: #f0d9ff; font-size: large;">
                   <p>
                     <b>Welcome to MathMate!</b> - a game for entertainment and
                     knowledge!
@@ -64,9 +63,9 @@
                     mathematical problem. The type of the problem can be
                     modified by the buttons with mathematical operations.
                     <br>
-                    <b>On the "normal" mode you will have 5 problems to solve.</b>
+                    <b>- On the "normal" mode you will have 5 problems to solve.</b>
                     <br>
-                    <b>On the "extreme" mode you will have to solve problems until you make a mistake.</b>
+                    <b>- On the "extreme" mode you will have to solve problems until you make a mistake.</b>
                   </li>
                   <br />
                   <li>
@@ -85,7 +84,7 @@
                   </li>
                   <br>
                   <li>
-                    After you end the game you will see the summary statistics of all your rounds before the end of the game.
+                    After you end the game you will see the summary statistics of your game.
                   </li>
                 </div>
               </div>
@@ -94,7 +93,7 @@
           </div>
         </div>
         <div class="d-flex align-self-center justify-content-center">
-          <div class="mw-75 pt-4">
+          <div class="w-75 pt-4">
             <img class="img-fluid" src="./images/mate.png" alt="emoji"/>
           </div>
         </div>
@@ -190,9 +189,9 @@
             <div class="container-fluid">
               <div class="d-flex flex-row align-items-center justify-content-center">
                 <div class="d-flex">
-                  <button class="btn btn-lg sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset(), closeModal()">Play Again</button>
-                  <button class="btn btn-lg mx-2 sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch(), closeModal()">Next Level</button>
-                  <button class="btn btn-lg sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame(), closeModal()">End Game</button>
+                  <button class="btn btn-lg mx-1 sidebtn" data-bs-dismiss="modal" id="playAgainBtn" onclick="reset(), closeModal(), startTimer()">Play Again</button>
+                  <button class="btn btn-lg mx-1 sidebtn" data-bs-dismiss="modal" id="nextLevelBtn" onclick="levelSwitch(), closeModal(), startTimer()">Next Level</button>
+                  <button class="btn btn-lg mx-1 sidebtn" data-bs-dismiss="modal" id="endGameBtn" onclick="endGame(), closeModal()">End Game</button>
                 </div>
               </div>
             </div>
@@ -211,13 +210,13 @@
         <h1 class="title">Scores</h1>
       </div>
       <div class="d-flex align-items-center w-75 shadow rounded p-2" style="background-color: #e3c3f8;">
-        <div class="d-flex flex-row justify-content-start col-12">
-          <div class="d-flex flex-column col-6">
+        <div class="d-flex flex-column flex-sm-row justify-content-start col-12">
+          <div class="d-flex flex-column col-sm-6 p-1">
             <p class="m-1 pars" id="playTime">Play time:</p>
             <p class="m-1 pars" id="totalRounds">Total rounds:</p>
             <p class="m-1 pars" id="totalGames">Total games:</p>        
           </div>
-          <div class="d-flex flex-column col-6">
+          <div class="d-flex flex-column col-sm-6 p-1">
             <p class="m-1 pars" id="totalAnswers">Total answers:</p>
             <p class="m-1 pars" id="correctPoints">Correct answers:</p>
             <p class="m-1 pars" id="incorrectPoints">Incorrect answers:</p>
@@ -225,16 +224,16 @@
           </div>
         </div>
       </div>
-      <div class="d-flex align-self-center justify-content-center mh-50">
-        <img id="endSceneDog" class="img-fluid" src="./images/mate.png" alt="emoji"/>
+      <div class="d-flex justify-content-center w-50">
+        <img id="endSceneDog" class="img-fluid mt-3" src="./images/mate.png" alt="emoji"/>
       </div>
       <div class="d-flex align-items-center justify-content-center">
         <button class="btn btn-lg sidebtn text-nowarp text-center" onclick="homeMenu(), resetStats()">Restart</button>
       </div>
     </div>
   </div>
-  <div class="m-2 position-fixed bottom-0 end-0">
-    <button id="soundButton" onclick="soundTurn(), sound(1)" class="m-1 p-2 btn btn-lg btnstl sidebtn">Sound: ON</button>
+  <div class="m-2 position-fixed bottom-0 end-0" id="soundBtnDiv">
+    <button id="soundButton" onclick="soundTurn(), sound(1)" class="p-2 btn btn-lg btnstl sidebtn" style="width: 150px;">Sound: ON</button>
   </div>
   <!-- End screen container end -->
 
@@ -248,6 +247,7 @@
     gtag("js", new Date());
     gtag("config", "G-5EETVGYWLS");
   </script>
+  <script src="soundButton.js"></script>
 </body>
 
 </html>
