--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
           </div>
         </div>
-        <div class="col d-flex flex-column align-items-center justify-content-center">
+        <div class="col d-flex flex-column align-items-center justify-content-center pt-2">
           <div class="mw-75">
             <img id="gameSceneDog" class="img-fluid" src="./images/transition dog.png" alt="emoji"/>
           </div>
